[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/characters/enemies/wanyudo-mini/wanyudo-mini-animated-sheet.png" type="Texture" id=1]
[ext_resource path="res://src/characters/enemies/wanyudo-mini/WanyudoMini.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 41, 41 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 41, 0, 41, 41 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 82, 0, 41, 41 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 123, 0, 41, 41 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 12.9876

[sub_resource type="CapsuleShape2D" id=7]
radius = 14.0523
height = 2.44068

[node name="WanyudoMini" type="RigidBody2D" groups=["killable-enemy"]]
collision_layer = 128
collision_mask = 2
mass = 2.04082
gravity_scale = 2.0
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -4 )
frames = SubResource( 5 )
frame = 2
playing = true

[node name="WorldCollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="BodyCollideArea2D" type="Area2D" parent="."]
collision_layer = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyCollideArea2D"]
position = Vector2( 0, -2 )
shape = SubResource( 7 )

[node name="LifetimeTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="body_entered" from="BodyCollideArea2D" to="." method="_on_body_entered"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_LifetimeTimer_timeout"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_FlashTimer_timeout"]
